--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
-
-fastapi
-jose
-pydantic
-python-jose
-pyodbc
-Flask
-waitress
-flask_cors
+annotated-types==0.5.0
+anyio==3.7.1
+blinker==1.6.2
+click==8.1.6
+ecdsa==0.18.0
+fastapi==0.100.0
+Flask==2.3.2
+Flask-Cors==4.0.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jose==1.0.0
+MarkupSafe==2.1.3
+pyasn1==0.5.0
+pydantic==2.0.3
+pydantic_core==2.3.0
+pyodbc==4.0.39
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.7.1
+waitress==2.1.2
+Werkzeug==2.3.6
